# learning-terraform-3087701

./: main.tf  outputs.tf  providers.tf
backup/: Makefile  README.md  bucket-policy-example.yaml  ddb_to_s3_processor.py  deploy-stack-dynamodb.sh  deploy-stack-s3.sh  dynamodb.yaml  event_sns_subscriber.py  jira_extractor.py  lambda_event.json  main.py  message.json  package-lock.json  package.json  pyproject.toml  s3.yaml  serverless.yml  service_run.py  service_run_exceptions.py  service_run_repository.py  service_run_service.py
